# audiodb-rust

./: .gitignore  Cargo.toml  README.md
src/: audiodb.rs  error.rs  lib.rs  types.rs
